fix page title (again)

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       href="https://github.com/friends-library-dev/design-assets/blob/master/logo/icon-only/Icon_Maroon_Web.png?raw=true"
     />
-    <title>FLP Orders</title>
+    <title>FLP Admin</title>
   </head>
   <body>
     <div id="root"></div>
